--- a/DL0321EN-4-1-Comparing-Models-py-v1.0.ipynb
+++ b/DL0321EN-4-1-Comparing-Models-py-v1.0.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -19,6 +20,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -32,6 +34,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -45,6 +48,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -71,6 +75,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -140,6 +145,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -418,6 +424,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -433,6 +440,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -446,6 +454,7 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
+    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -460,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -474,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
